[package]
name = "sorting_algorithm"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8.5", default-features = false, features = ["std"] }
rand_chacha = "0.3.1"
getrandom = { version = "0.2", features = ["js"] }
num-traits = "*"
wasm-bindgen = "*"

[lib]
crate-type = ["cdylib"]
